[package]
name = "rs-blockchain"
version = "0.1.0"
authors = ["Ron Alonzo <alonzo.ronald@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.9.2"